@@ -3,6 +3,10 @@ OAR CHANGELOG
 
 version 2.4.4:
 --------------
+  - Bug 10999: memory leak into Hulot when used with postgresql. The leak has been
+    minimized, but it is still there (DBD::Pg bug)
+  - Almighty cleans ipcs used by oar on exit
+  - Bugfix #10641 and #10999 : Hulot is automatically and periodically restarted
   - oar_resource_init: bad awk delimiter. There's a space and if the property
     is the first one then there is not a ','.
   - job suspend: oardo does not exist anymore (long long time ago). Replace it
